Multi user with auth

--- a/templates/pageheader.html
+++ b/templates/pageheader.html
@@ -14,6 +14,9 @@
         </div>
         <button type="submit" class="btn btn-default" ng-click="filtrar();">Filtrar</button>
     </form>
+       <a class="navbar-brand navbar-right" href="#/" ng-click="sair();">
+       Sair
+      </a>
     
   </div>
 </nav>
