--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,17 +1,17 @@
 <pageheader></pageheader>
 <div class="container">
-  <form role="form">
+  <form role="form" name="formTransaction">
     <div class="form-group">
       <label for="descricao">Descrição</label>
-      <input type="text" class="form-control" id="descricao" ng-model="descricao">
+      <input type="text" name="descricao" class="form-control" id="descricao" ng-model="descricao"  required>
     </div>
     <div class="form-group">
       <label for="valor">R$:</label>
-      <input type="text" class="form-control" id="valor" ng-model="valor">
+      <input type="text" class="form-control" id="valor" ng-model="valor" class="money" required>
     </div>
     <div class="form-group">
       <label for="data">Data:</label>
-      <input type="text" class="form-control" id="data" ng-model="data"/>
+      <input type="text" class="form-control" id="data" ng-model="data" class="data" required/>
     </div>
     <div>
      <button type="button" class="btn btn-default" ng-click="addGasto()">Gravar</button>
