--- a/templates/pageheader.html
+++ b/templates/pageheader.html
@@ -8,6 +8,9 @@
        <a class="navbar-brand" href="#/graficos">
        Gráficos
       </a>
+        <a class="navbar-brand" href="#/ofximport">
+       Importar
+      </a>
     <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
         <input id="txtperiodo" type="text" class="form-control" ng-model="periodo">
