--- a/templates/pageheader.html
+++ b/templates/pageheader.html
@@ -1,10 +1,13 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
-    
+
       <a class="navbar-brand" href="#/">
-       Cadastro
+       Transações
       </a>
-      
+
+      <a class="navbar-brand" href="#/contas">
+      Contas
+      </a>
        <a class="navbar-brand" href="#/graficos">
        Gráficos
       </a>
@@ -20,6 +23,6 @@
        <a class="navbar-brand navbar-right" href="#/" ng-click="sair();">
        Sair
       </a>
-    
+
   </div>
 </nav>
