Upload de arquivos

--- a/templates/ofximport.html
+++ b/templates/ofximport.html
@@ -3,8 +3,8 @@
   <form role="form" name="formofx" >
      <div class="form-group">
       <label for="files">Arquivo .OFX</label>
-      <input id="fileupload" name="files" type="file" accept=".ofx"/>
-     
+      <input id="fileupload" name="files" type="file" accept="ofx"/>
+
        <br/>
        <br/>
     </div>
@@ -24,5 +24,5 @@
            <td><span id="Falhas"> </span></td>
         </tr>
    </table>
-   
+
    </div>
