--- a/templates/contas.html
+++ b/templates/contas.html
@@ -25,6 +25,16 @@
      <button type="button" class="btn btn-default" ng-click="addConta()">Gravar</button>
    </div>
   </form>
+
+  <form role="form" name="formofx" ng-show="(id_conta != '')"  >
+     <div class="form-group">
+      <label for="files">Comprovante</label>
+      <input id="fileupload" name="files" type="file" accept="application/pdf,image/jpeg,image/x-png"/>
+      <br>
+      <a id="urlComprovante" href="{{URLComprovante}}" target="_blank">Donwload</a>
+    </div>
+
+   </form>
 </div>
 
 <div class="container" style="margin-top:20px">
@@ -36,20 +46,26 @@
         <th>Data</th>
         <th>Pago</th>
         <th></th>
+	       <th></th>
+         <th></th>
       </tr>
     </thead>
     <tbody >
-      <tr ng-repeat="item in contas">
+      <tr ng-repeat="item in contas" style="{{item.estilo}}">
         <td>{{item.descricao}}</td>
         <td>R$ {{item.valor}}</td>
         <td>{{item.data_vencimento}}</td>
         <td><input type="checkbox" ng-checked="item.pago" id="{{item._id}}"  ng-click="pagarConta(item._id)"></td>
         <td><a class="fa fa-trash" ng-click="deleteConta(item._id)"></a></td>
-
+	      <td><a class="fa fa-pencil" ng-click="selecionaConta(item._id)"></a></td>
+        <td><a class="fa fa-download" href="{{item.URL}}" ng-show="(item.URL != undefined)" target="_blank"></a></td>
     </tbody>
 
   </table>
   <div>
-    <label style="color:red" >Valor Pendente: R$ {{valorPendente}}
+    <label style="color:red" >Valor Pendente: R$ {{valorPendente}}</label>
+  </div>
+  <div>
+  <label style="color:red">Valor Vencido R$ {{valorVencido}}</label>
   </div>
 </div>
