--- a/templates/pageheader.html
+++ b/templates/pageheader.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
 
       <a class="navbar-brand" href="#/">
-       Transações
+       Movimentação
       </a>
 
       <a class="navbar-brand" href="#/contas">
