--- a/templates/pageheader.html
+++ b/templates/pageheader.html
@@ -1,28 +1,27 @@
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-
-      <a class="navbar-brand" href="#/">
-       Movimentação
-      </a>
-
-      <a class="navbar-brand" href="#/contas">
-      Contas
-      </a>
-       <a class="navbar-brand" href="#/graficos">
-       Gráficos
-      </a>
-        <a class="navbar-brand" href="#/ofximport">
-       Importar
-      </a>
-    <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-        <input id="txtperiodo" type="text" class="form-control" ng-model="periodo">
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/#/">Expense</a>
         </div>
-        <button type="submit" class="btn btn-default" ng-click="filtrar();">Filtrar</button>
-    </form>
-       <a class="navbar-brand navbar-right" href="#/" ng-click="sair();">
-       Sair
-      </a>
 
-  </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="/#/movimento">Movimentação</a></li>
+                <li><a href="/#/contas">Contas</a></li>
+                <li><a href="/#/ofximport">Importar</a></li>
+                <li><a href="/#/graficos">Gráficos</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
 </nav>
