--- a/templates/contas.html
+++ b/templates/contas.html
@@ -10,6 +10,10 @@
             <input type="text" class="form-control" id="valor" ng-model="valor" class="money" required>
         </div>
         <div class="form-group">
+            <label for="Mensal">Conta Mensal:</label>
+            <input type="checkbox" class="" id="mensal" ng-model="mensal"/>
+        </div>
+        <div class="form-group">
             <label for="data">Vencimento:</label>
             <input type="text" class="form-control" id="data_vencimento" ng-model="data_vencimento" class="data" required/>
         </div>
